--- a/CommonService/pom.xml
+++ b/CommonService/pom.xml
@@ -92,13 +92,13 @@
 			<artifactId>analyzer</artifactId>
 			<version>1.0</version>
 		</dependency>
-   -->
+
         <dependency>
             <groupId>com.chulung</groupId>
             <artifactId>IK-Analyzer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        -->
         <!--中文分词器-->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
@@ -124,6 +124,36 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/com.janeluo/ikanalyzer
+		<dependency>
+			<groupId>com.janeluo</groupId>
+			<artifactId>ikanalyzer</artifactId>
+			<version>2012_u6</version>
+		</dependency>
+         -->
+
+		<!--
+		<dependency>
+			<groupId>com.chulung</groupId>
+			<artifactId>IK-Analyzer</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+         -->
+
+		<dependency>
+			<groupId>com.xiu</groupId>
+			<artifactId>IK_Analyzer</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+		<!--中文分词器-->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers-smartcn</artifactId>
+			<version>${lucene.version}</version>
 		</dependency>
 
 	</dependencies>
