--- a/CommonService/src/main/resources/application.properties
+++ b/CommonService/src/main/resources/application.properties
@@ -29,15 +29,16 @@ logging.level.org.spring.springboot.dao=DEBUG
 #redis配置
 # REDIS (RedisProperties)
 # Redis数据库索引（默认为0）
-spring.redis.database=0  
+#spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=192.168.47.137
+#spring.redis.host=192.168.47.137
+spring.redis.host=47.92.79.38
 # Redis服务器连接端口
 spring.redis.port=6379  
 # Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=123456
 # 连接池最大连接数（使用负值表示没有限制）
-#spring.redis.pool.max-active=8
+#spring.redis.pool.max.active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
 #spring.redis.pool.max-wait=-1
 # 连接池中的最大空闲连接
