--- a/CommonService/src/main/resources/application.properties
+++ b/CommonService/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 #dubbo 服务配置
 spring.dubbo.application.name=provider
-spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
+spring.dubbo.registry.address=zookeeper://47.92.79.38:2181
+
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
-spring.dubbo.scan=org.spring.springboot.dubbo
+# 声明需要暴露的服务接口
+spring.dubbo.scan=com.xiu.followdouban.commonservice.service
+server.port=8080
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 #数据库服务配置
