--- a/CommonWebApi/pom.xml
+++ b/CommonWebApi/pom.xml
@@ -27,6 +27,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.xiu.followDouban</groupId>
+			<artifactId>commonrpc</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
@@ -44,6 +50,9 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
