--- a/CommonService/pom.xml
+++ b/CommonService/pom.xml
@@ -78,6 +78,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
