--- a/CommonService/src/main/resources/application.properties
+++ b/CommonService/src/main/resources/application.properties
@@ -1,12 +1,54 @@
-#dubbo 服务配置
-spring.dubbo.application.name=provider
-spring.dubbo.registry.address=zookeeper://47.92.79.38:2181
+# Spring boot application
+spring.application.name = lucene-service-provider
+server.port = 8080
 
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20880
-# 声明需要暴露的服务接口
-spring.dubbo.scan=com.xiu.followdouban.commonservice.service
-server.port=8080
+
+# DemoService service version
+demo.service.version = 1.0.0
+
+# Base packages to scan Dubbo Component: @com.alibaba.dubbo.config.annotation.Service
+dubbo.scan.base-packages  = com.xiu.followdouban.commonservice.service
+
+
+# Dubbo Config properties
+## ApplicationConfig Bean
+dubbo.application.qos.port=0
+dubbo.application.qos.enable=true
+
+
+## Enable multiple config bindings
+dubbo.config.multiple =true
+
+## ProtocolConfig Bean
+dubbo.protocols.dubbo.name = dubbo
+dubbo.protocols.dubbo.port = 12345
+dubbo.protocols.dubbo.status = server
+
+dubbo.protocols.rest.name = rest
+dubbo.protocols.rest.port = 8888
+
+## RegistryConfig Bean
+dubbo.registry.id = my-registry
+dubbo.registry.protocol=zookeeper
+#dubbo直连 不适用注册中心进行处理 生产者消费者直接进行连接
+#dubbo.registry.address = N/A
+dubbo.registry.address=47.92.79.38:2181
+
+# Enables Dubbo All Endpoints
+management.endpoint.dubbo.enabled = true
+management.endpoint.dubboShutdown.enabled = true
+management.endpoint.dubboConfigs.enabled = true
+management.endpoint.dubboServices.enabled = true
+management.endpoint.dubboReferences.enabled = true
+management.endpoint.dubboProperties.enabled = true
+
+# Dubbo Health
+## StatusChecker Name defaults (default : "memory", "load" )
+management.health.dubbo.status.defaults = memory
+## StatusChecker Name extras (default : empty )
+management.health.dubbo.status.extras = load,threadpool
+
+
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 #数据库服务配置
