--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -27,6 +27,30 @@
 	</properties>
 
 	<dependencies>
+		<!--日志 start-->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.25</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -90,19 +114,20 @@
             <version>${lucene.version}</version>
         </dependency>
 
+		<!--
         <dependency>
             <groupId>com.chulung</groupId>
             <artifactId>IK-Analyzer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!--
+        -->
+
         <dependency>
             <groupId>com.xiu</groupId>
             <artifactId>IK_Analyzer</artifactId>
             <version>1.0.0</version>
         </dependency>
-        -->
 
         <!--中文分词器-->
         <dependency>
@@ -118,6 +143,27 @@
 				<version>1.2.47</version>
 			</dependency>
 
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.21.0-GA</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.5.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>javassist</artifactId>
+					<groupId>org.javassist</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 
 	<build>
