dubbo与springBoot的整合测试

--- a/CommonWebApi/src/main/resources/application.properties
+++ b/CommonWebApi/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.dubbo.registry.address=zookeeper://47.92.79.38:2181
 
 spring.dubbo.scan=com.xiu.followdouban.commonwebapi.Controller
 
-demo.service.version = 1.0.0
+spring.dubbo.service.version = 1.0.0
+spring.dubbo.application.logger = slf4j
 server.port=8889 
