电影模块完善

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ pagehelper.params=count=countSql
 server.session.timeout=31536000
 #server.port=9001
 server.port=9000
+server.context-path=/utopia
 
 
 #print sql
