--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
 
-spring.datasource.url=jdbc:mysql://rm-2ze8sn14e586o7kv9.mysql.rds.aliyuncs.com:1433/m_kiosk_pms?useUnicode=true&characterEncoding=utf-8&useSSL=False&allowMultiQueries=true
-spring.datasource.username=m_kiosk_pms_rw
-spring.datasource.password=ze786v2R
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/utopia?useUnicode=true&characterEncoding=utf-8&useSSL=False&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
@@ -16,5 +16,7 @@ pagehelper.params=count=countSql
 
 #server
 server.session.timeout=31536000
-server.port=9002
+server.port=8035
+server.context-path=/utopia
+
 
