完善书籍信息 合同分支

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ server.context-path=/utopia
 
 #print sql
 logging.level.org.springframework=WARN
-logging.level.com.miaosu.saas.pms.dao=DEBUG
+logging.level.com.miaosu.saas.pms.dao=debug
