--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
             <version>1.4.0</version>
         </dependency>
 
+        <!-- durid数据源 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+        </dependency>
 
 
     </dependencies>
