--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/utopia?useUnicode=true&characterEncoding=utf-8&useSSL=False&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=xieqixiu@2019
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
