--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,3 +20,24 @@ server.port=8035
 server.context-path=/utopia
 
 
+#设置redis服务信息
+#redis配置
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+spring.redis.database=0  
+# Redis服务器地址
+spring.redis.host=49.232.47.236
+# Redis服务器连接端口
+spring.redis.port=6385  
+# Redis服务器连接密码（默认为空）
+spring.redis.password=xieqixiu@2019
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.time=3000
