修改qq登录的json转换

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -41,3 +41,12 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.time=3000
+
+
+#qq登录信息的配置
+#qq登录的appid
+qq.appId=101810237
+#qq登录的appKey
+qq.appKey=581dc84198d3319ddbd50b3f0ca4b810
+# qq登录的回调地址
+qq.authPath=http://utopiaxiu.cn/#
