--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,7 +64,7 @@ spring.redis.database=0
 # Redis服务器地址
 spring.redis.host=49.232.47.236
 # Redis服务器连接端口
-spring.redis.port=6385  
+spring.redis.port=6385
 # Redis服务器连接密码（默认为空）
 spring.redis.password=xieqixiu@2019
 # 连接池最大连接数（使用负值表示没有限制）
@@ -77,3 +77,17 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.time=3000
+
+#qq登录信息的配置
+#qq登录的appid
+qq.appId=101810237
+#qq登录的appKey
+qq.appKey=581dc84198d3319ddbd50b3f0ca4b810
+# qq登录的回调地址
+qq.redirectUri=http://utopiaxiu.cn/#
+
+#qq登录获取qq账号
+qq.url.getQQAccount=https://graph.qq.com/oauth2.0/me
+
+#qq获取用户详细信息
+qq.url.getUserInfo=https://graph.qq.com/user/get_user_info
